# BrainNet

./: .env.example  .gitignore  README.md  brainshare_api.py  dev-readme  dev-readme.txt  docker-compose.yml  et --soft HEAD~1  package-lock.json  package.json  pyproject.toml  requirements.txt  test.db
app/: __init__.py  crud.py  database.py  deps.py  main.py  models.py  requirements.txt  schemas.py
app/core/: security.py
app/db/: __init__.py  store.py
app/routers/: __init__.py  auth.py  nodes.py  projects.py  tags.py  users.py  votes.py  websocket.py  ws.py
app/utils/: __init__.py  time.py  ws_manager.py
backend/: Dockerfile  alembic.ini  requirements.txt  startup.sh
backend/alembic/: env.py
backend/alembic/versions/: 4c389bbebfad_모델_전체_동기화.py  6269daf2e4b1_init_schema.py
backend/app/: main.py
backend/app/core/: __init__.py  security.py
backend/app/db/: __init__.py  models.py  session.py  store.py
backend/app/models/: __init__.py  activity_log.py  auth.py  history.py  invite_token.py  node.py  node_metrics.py  node_version.py  project.py  project_user_role.py  tag.py  tag_node.py  tag_summary.py  user.py  vote.py
backend/app/routers/: __init__.py  auth.py  debug.py  history.py  nodes.py  projects.py  tags.py  users.py  votes.py  websocket.py
backend/app/utils/: __init__.py  helpers.py  time.py  ws_manager.py
backend/envexmaple/: env.py
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/src/app/: BackgroundGraph.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/lib/: apiClient.ts
(+39 files in other folders)
